<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/poster_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="@dimen/margins"
            android:padding="@dimen/paddings" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="@dimen/margins"
            android:padding="@dimen/paddings"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            tools:text="@string/title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginStart="@dimen/margins"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/margins"
            android:padding="4dp"
            android:text="Mark as favorite"
            android:textSize="@dimen/subtitle"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="@dimen/margins"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/release_date"
                android:textSize="@dimen/subtitle"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddings"
                tools:text="@string/date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="@dimen/margins"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddings"
                android:text="@string/user_rating"
                android:textSize="@dimen/subtitle"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/vote_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddings"
                tools:text="@string/rating_value" />
        </LinearLayout>

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="@dimen/margins"
            android:maxLines="5"
            android:padding="@dimen/paddings"
            android:textSize="@dimen/subtext"
            android:textStyle="normal"
            tools:text="@string/dummy_text" />
        <TextView
            android:id="@+id/movie_trailers"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="@dimen/margins"
            android:textAlignment="center"
            android:layout_marginRight="@dimen/margins"
            android:layout_marginEnd="@dimen/margins"
            android:padding="@dimen/paddings"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            android:text="Trailers"/>
        <TextView
            android:id="@+id/movie_reviews"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margins"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginTop="@dimen/margins"
            android:layout_marginBottom="@dimen/margins"
            android:layout_marginRight="@dimen/margins"
            android:layout_marginEnd="@dimen/margins"
            android:padding="@dimen/paddings"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="Reviews"/>


    </LinearLayout>
</ScrollView>